# fiberslice-5d

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  icons_Fiberslicer.7z
.github/workflows/: rust.yml
assets/: bed2.glb  bed_new.glb  bed_new.mtl  bed_obj.mtl  print-bed.STEP  print_bed.mtl  print_bed.stl  stifhalterung.stl  with-textures.glb  with-textures.gltf  without-textures.glb
automated_gpt_py/: create_protocol.py
automated_gpt_py/commits-since-beginning/: 1.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  18.txt  20.txt  21.txt  3.txt  6.txt  8.txt  9.txt
automated_prepare_gpt/: create_protocol.py  delete_all_diffs.ps1  test_commit.txt
automated_prepare_gpt/commits-since-beginning/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
automated_prepare_gpt/commits-since-beginning/raw_commits/: 0.txt
gcode/: test.gcode
macros/: Cargo.toml
macros/src/: lib.rs
protocol/slicer/init/: init.prtcl
protocol/slicer/less_memory_usage_2023-09-11/: less_memory_usage_2023-09-11_12-12.prtcl
protocol/slicer/less_memory_usage_2023-09-15/: less_memory_usage_2023-09-15_11-11.prtcl
protocol/visualization/intersection_feature_2023-11-17/: intersection_feature_2023-11-17_23-57.prtcl
protocol/visualization/intersection_feature_2023-11-18/: intersection_feature_2023-11-18_23-57.prtcl
settings/: filament.yaml  main.yaml  printer.yaml  test.yaml
shared/: Cargo.toml
shared/src/: lib.rs  loader.rs  object.rs  process.rs
slicer/: Cargo.toml
slicer/src/: calculation.rs  command_pass.rs  converter.rs  coverter.rs  error.rs  lib.rs  mask.rs  optimizer.rs  settings.rs  slice_pass.rs  slicing.rs  tower.rs  utils.rs  warning.rs
slicer/src/plotter/: infill.rs  lightning_infill.rs  mod.rs  monotone.rs  perimeter.rs  polygon_operations.rs  support.rs
src/: application.rs  camera.rs  component.rs  config.rs  environment.rs  error.rs  event.rs  fiberslice.rs  gui.rs  import.rs  input.rs  main.rs  main2.rs  picking.rs  prelude.rs  render.rs  setup.rs  shortcut.rs  slicer.rs  tools.rs  ui.rs  utils.rs  view.rs  window.rs  window_builder.rs
src/actions/: file.rs  mod.rs
src/api/: format.rs  math.rs  mod.rs  ui.rs
src/app/: application.rs  mod.rs
src/camera/: camera_controller.rs  orbit_camera.rs
src/component/: print_bed.rs  tabbed_view.rs
src/control/: mod.rs
src/env/: mod.rs  universe.rs
src/environment/: camera_controller.rs  view.rs
src/fiberslice/: gui.rs  options.rs  screen.rs  utils.rs  window.rs
src/fiberslice/screen/: addons.rs  menubar.rs  popups.rs  side.rs  taskbar.rs  view.rs
src/geometry/: box.rs  mesh.rs  mod.rs
src/gui/: addons.rs  icon.rs  menubar.rs  modebar.rs  screen.rs  settingsbar.rs  side.rs  taskbar.rs  toolbar.rs  visual.rs
src/gui/addons/: force_analytics.rs  monitor.rs  prepare.rs  preview.rs
src/input/: hitbox.rs  interact.rs  queue.rs
src/math/: mod.rs
src/model/: layer.rs  mesh.rs  mod.rs  transform.rs
src/picking/: hitbox.rs  interact.rs  interactive.rs  interactive_mesh.rs  queue.rs  ray.rs
src/prelude/: event.rs  shared.rs  wrap.rs
src/render/: buffer.rs  camera.rs  light.rs  model.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/settings/: filament.rs  mod.rs  printer.rs  structure.rs  tree.rs
src/slicer/: calculation.rs  command_pass.rs  coverter.rs  mod.rs  optimizer.rs  path.rs  print_type.rs  slice_pass.rs  slicing.rs  tower.rs  utils.rs
src/tests/: mod.rs
src/ui/: boundary.rs  custom_toasts.rs  data.rs  font.rs  icon.rs  modal.rs  parallel.rs  response.rs  screen.rs  settings.rs  state.rs  visual.rs
src/ui/api/: mod.rs  (+2 more)
src/utils/: format.rs  frame.rs  mod.rs  model_loader.rs  task.rs
src/view/: buffer.rs  camera.rs  environment.rs  mod.rs  mode.rs  orbit.rs  picking.rs  preview.rs  visualization.rs
src/viewer/: camera.rs  env_server.rs  mod.rs  part_server.rs  select.rs  tracker.rs  volume.rs  widget_server.rs
traits/: Cargo.toml
traits/src/: lib.rs
type_eq/: Cargo.toml
type_eq/src/: lib.rs
type_eq/type_eq_derive/: Cargo.toml
(+109 files in other folders)
