#![allow(dead_code)]
[package]
name = "fiberslice-5d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_grid = { git = "https://github.com/GodGotzi/egui_grid" }
egui_extras = "0.27.2"
egui_glow = "0.27.2"
egui = "0.27.2"
strum = "0.26"
strum_macros = "0.26"
image = { version = "0.25" }
lazy_static = "1.4.0"
macros = { path = "macros" }
traits = { path = "traits" }
thiserror = "1.0.30"
serde = "1.0.177"
serde_yaml = "0.9.25"
stl_io = "0.7.0"
nfde = "0.0.8"
uni-path = "1.51.1"
phf = { version = "0.11", features = ["macros"] }


three-d = { version = "0.17" }
three-d-asset = "0.7.0"
winit = "0.29"

tokio = { version = "1.34.0", features = ["macros", "full"] }
serde_json = "1.0.64"
parking_lot = "0.12.1"
glow = "0.13"
egui_xml = "0.1.3"
puffin = "0.19.0"
puffin_http = "0.16.0"

egui_demo_lib = "0.27.2"
egui_wgpu_backend = "0.29"
egui_winit_platform = "0.22"
pollster = "0.3.0"
wgpu = "0.20"
