#![allow(dead_code)]
[package]
name = "fiberslice-5d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_grid = { git = "https://github.com/GodGotzi/egui_grid" }
egui_extras = { version = "0.28", features = ["all_loaders"] }
egui = "0.28"
egui_wgpu_backend = { git = "https://github.com/GodGotzi/egui_wgpu_backend.git" }
egui_winit_platform = "0.23"

strum = "0.26"
strum_macros = "0.26"
image = { version = "0.25", features = ["jpeg", "png"] }

thiserror = "1.0.30"
serde = "1.0.177"
serde_yaml = "0.9.25"
stl_io = "0.8.2"
nfde = "0.0.8"
uni-path = "1.51.1"
phf = { version = "0.11", features = ["macros"] }

winit = "0.30"

tokio = { version = "1.34.0", features = ["macros", "full"] }
serde_json = "1.0.64"
parking_lot = "0.12.1"
egui_xml = "0.1.3"
puffin = "0.19.0"
puffin_http = "0.16.0"

wgpu = "22.0"

glam = "0.29"
bytemuck = "1.7.0"
simple-logging = "2.0.2"
log = "0.4.21"
egui-toast = "0.14"
puffin_egui = { git = "https://github.com/EmbarkStudios/puffin" }
futures-channel = "0.3.30"

egui_code_editor = "0.2.9"
env_logger = "0.11.3"
pollster = "0.3.0"
rether = { path = "rether" }
