[package]
name = "slicer"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10.0"
ordered-float = "4.4"
rand = "0.8.5"

geo = { version = "0.28.0", features = ["use-serde"] }
geo-clipper = "0.8.0"
geo-svg = "0.6.3"

itertools = "0.13.0"
deser-hjson = "2.2.4"
serde = "1.0.210"

strum = "0.26"
strum_macros = "0.26"


glam = "0.29.0"

once_cell = "1.10"
serde_json = "1.0.129"
lazy_static = "1.5.0"
shared = { path = "../shared" }
